Overflow fixed

--- a/index.css
+++ b/index.css
@@ -17,8 +17,8 @@ h3{
 }
 body{
     background: rgb(102,172,248);
-    overflow-x: hidden;
     display: block;
+    overflow-x: scroll;
     background: linear-gradient(135deg, rgba(102,172,248,1) 34%, rgba(80,97,125,1) 96%);
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
 }
@@ -26,7 +26,7 @@ body{
 #logo{
     width: 90px;
     position: relative;
-    left: 155px;
+    left: 135px;
     right: 150px;
     box-align: center;
 }
@@ -43,7 +43,7 @@ body{
     position: relative;
     width: 250px;
     bottom: 10px;
-    left:130px;
+    left:70px;
 }
 
 #igid{
@@ -122,7 +122,7 @@ a.button1{
     padding:0.35em 1.2em;
     position: relative;
     border:0.1em solid #29468d;
-    top: -150px;
+    top: -350px;
     left: 0px;
     border-radius:0.12em;
     box-sizing: border-box;
@@ -303,7 +303,7 @@ a.button2:hover{
     width: 50%;
     display: -webkit-box;
     position: relative;
-    left: 85px;
+    left: 60px;
     top: 790px;
     bottom: 20px;
     display: flex;
@@ -395,6 +395,15 @@ a.button2:hover{
         padding-left: 675px;
     }
     
+
+
+    body{
+        background: rgb(102,172,248);
+        overflow-x: hidden;
+        display: block;
+        background: linear-gradient(135deg, rgba(102,172,248,1) 34%, rgba(80,97,125,1) 96%);
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+    }
     
     #text{
         text-align: center;
